[package]
name = "pp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
