[package]
name = "pq"
version = "0.2.1"
edition = "2024"
description = "Fast fuzzy password search for Proton Pass CLI"
repository = "https://github.com/abdullah-a8/Pass-Query"
license = "MIT"
keywords = ["proton-pass", "password", "cli", "fzf", "clipboard"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
indicatif = "0.18.3"
colored = "3.0.0"
